--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
+    "connect-redis": "^4.0.4",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "googleapis": "^50.0.0",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
@@ -23,12 +25,15 @@
     "mysql2": "^2.1.0",
     "node-notifier": "^7.0.0",
     "nodemailer": "^6.4.10",
+    "rewire": "^5.0.0",
     "sequelize": "^5.21.8",
     "validatorjs": "^3.18.1",
     "verror": "^1.10.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "babel-jest": "^26.1.0",
+    "babel-plugin-rewire": "^1.2.0",
     "jest": "^26.0.1",
     "supertest": "^4.0.2"
   }
