--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-boilerplate",
+  "name": "hotel-booking",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -17,10 +17,13 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-list-endpoints": "^4.0.1",
     "express-session": "^1.17.1",
     "googleapis": "^50.0.0",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
     "node-notifier": "^7.0.0",
