--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "matchit": "^1.0.8",
     "moment": "^2.27.0",
     "morgan": "^1.10.0",
     "mysql2": "^2.1.0",
